[gd_scene load_steps=6 format=3 uid="uid://uqyd6vtjqbj5"]

[ext_resource type="Script" uid="uid://dd6hvxcvrcs8i" path="res://game/chess_session.gd" id="1_obthr"]
[ext_resource type="PackedScene" uid="uid://bnxwulu1cjt0r" path="res://game/chess_view.tscn" id="2_urwq1"]
[ext_resource type="Texture2D" uid="uid://cn72qaw31tslh" path="res://Textures/UI/flip_icon.svg" id="4_60hl8"]
[ext_resource type="Texture2D" uid="uid://in2tu2qv5ivy" path="res://Textures/UI/undo_icon.svg" id="5_4i2a0"]
[ext_resource type="Texture2D" uid="uid://c6t61ly4oiiw4" path="res://Textures/UI/resign_icon.svg" id="6_ei1uk"]

[node name="ChessSession" type="HSplitContainer" node_paths=PackedStringArray("move_buttons", "chess_board", "wall_selection")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
split_offset = -600
script = ExtResource("1_obthr")
move_buttons = NodePath("PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/MoveButtons")
chess_board = NodePath("SubViewportContainer/SubViewport/ChessView/Game/Chess2D")
wall_selection = NodePath("SubViewportContainer/SubViewport/ChessView/Game/WallSelection")

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
stretch = true

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
handle_input_locally = false
physics_object_picking = true
size = Vector2i(2, 2)
render_target_update_mode = 4

[node name="ChessView" parent="SubViewportContainer/SubViewport" instance=ExtResource("2_urwq1")]

[node name="WallSelection" parent="SubViewportContainer/SubViewport/ChessView/Game" index="1"]
process_mode = 4
modulate = Color(1, 1, 1, 0)

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 14
theme_override_constants/margin_top = 14
theme_override_constants/margin_right = 14
theme_override_constants/margin_bottom = 14

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 14
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 14

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/MarginContainer"]
layout_mode = 2

[node name="MoveButtons" type="HFlowContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="FlipButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Flip"
icon = ExtResource("4_60hl8")

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="UndoButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Undo"
icon = ExtResource("5_4i2a0")
text_overrun_behavior = 1

[node name="Quitbutton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Resign"
icon = ExtResource("6_ei1uk")
text_overrun_behavior = 1

[connection signal="piece_moved" from="SubViewportContainer/SubViewport/ChessView/Game/Chess2D" to="." method="_piece_moved"]
[connection signal="wall_selected" from="SubViewportContainer/SubViewport/ChessView/Game/WallSelection" to="." method="_wall_selected"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/FlipButton" to="." method="_flip_board"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/UndoButton" to="." method="_undo_last_move"]

[editable path="SubViewportContainer/SubViewport/ChessView"]
